--- a/index.html
+++ b/index.html
@@ -873,6 +873,9 @@
                    <p class="patchnotes"><br><a href="#e0"> Preface</a></p>   
                                       <p class="patchnotes"><br><a href="#announcements">News (e.g. new entries)</a></p> 
                                       <p class="patchnotes"><br><a href="#nondiegetic">Guides</a></p>  
+        <h3>Narrative</h3>
+<p class="patchnotes"><a href="#e40">40. From the Torn Notebook (Annotated)</a></p>
+<p class="patchnotes"><br><a href="#e41">41. From the Torn Notebook (Annotated) (Part 2)</a></p>                                      
         <h3>Recommended context</h3>
 <p class="patchnotes"><a href="#e1">1. From <em>Once Upon A Time</em></a></p>
 <p class="patchnotes"><br><a href="#e3">3. From <em>History of Yarvant</em></a></p>
@@ -884,8 +887,6 @@
         <h3>Undertale</h3>
 <p class="patchnotes"><a href="#e15">15. From <em>Profile: Arfia-hin</em></a></p>
 <p class="patchnotes"><br><a href="#e29">29. From an anonymous review of <em>Mew Mew Kissy Cutie 2</em></a></p>
-<p class="patchnotes"><br><a href="#e40">40. From the Torn Notebook (Annotated)</a></p>
-<p class="patchnotes"><br><a href="#e41">41. From the Torn Notebook (Annotated) (Part 2)</a></p>
         <h3>Cultural systems</h3>
 <p class="patchnotes"><a href="#e7">7. From <em>Common Knowledge Curriculum - Year 2</em></a></p>
 <p class="patchnotes"><br><a href="#e9">9. From <em>The Pantheon of Ester</em></a></p>
@@ -956,6 +957,7 @@
 
 <div class="list">
   <ul class="centerlist">
+    <li><p>2025-08-22: Moved the Torn Notebook to the front, to act as a narrative hook.</p></li>
         <li><p>2025-08-16: Added entry <a href="#e42" target="_blank" rel="noopener noreferrer">42</a> to the "Miscellaneous" section, about the Bokelzidrej family and plurality, and added a non-diegetic guide section.</p></li>
     <li><p>2025-08-02: Added entry <a href="#e41" target="_blank" rel="noopener noreferrer">41</a> to the "Undertale" section, about the Underground, continuing entry 40.</p></li>
         <li><p>2025-08-01: Added entry <a href="#e40" target="_blank" rel="noopener noreferrer">40</a> to the "Undertale" section, about the Underground. This is the longest entry.</p></li>
@@ -3579,18 +3581,18 @@ Chara - Khara/Magzi Brujgal<br>
 
 <div id="e0" class="tab-content">
     <h1 class="patchnotes"> Welcome to Undersided!</h1>
-  <p class="patchnotes">"Undersided" is a project by <a href="#vg">Vector Graphics</a> detailing the world of ʏᴏɴᴀ. The project is an expansion of the setting of <em>Undertale</em> by Toby Fox, and from the perspective of that community it can be seen as an AU. The official media for Undersided largely consists of excerpts from in-universe documents.</p>
+  <p class="patchnotes">"Undersided" is a project by <a href="#vg">Vector Graphics</a> detailing the world of ʏᴏɴᴀ. The project is an expansion of the setting of <em>Undertale</em> by Toby Fox, and from the perspective of that community it can be seen as an AU. The official media for Undersided largely consists of excerpts from in-universe documents. It's a good idea to start by reading the <a href="#e40">Torn Notebook</a>!</p>
   <p> <strong>The site has recently received a major rework! Please click on the links to the left to read the story.</strong></p>
     <p> <strong>Additionally, check the NEWS to see if there are new entries!</strong></p>
     <p>(Note: entry numbers are out of order due to corresponding to AO3 chapters and the chronological order of addition to the website.)</p>
+
   <h3 class="patchnotes"> Conventions</h3>
   <p class="patchnotes">The documents here are translated from the original language they are written in (often modern Rahazuna or Nideri) into English. To do this faithfully, several conventions have had to be chosen.</p>
   <div class="list">
   <ul class="centerlist">
-    <li><p>The term "monster" is not used for the magic-based race that inhabits the world alongside humans. Instead, the term "yaref" [plural: yarov] from the original language is loaned. This is done to avoid ambiguity with other senses of "monster". Similarly with "magic" being replaced with "yahir".</p></li>
-    <li><p>Other potentially ambiguous terminology, such as "DETERMINATION", "SOUL", "SAVE", and others, is spelled in ALL CAPS.</p></li>
+    <li><p>The term "monster" is not used for the magic-based race that inhabits the world alongside humans. Instead, the term "yaref" [plural: yarov] from the original language is loaned. This is done to avoid ambiguity with other senses of "monster". Similarly with the term "magic" being in most cases avoided, or if necessary replaced with "yahir" (a term for a philosophical concept in Panavic and Vanki culture relating to the expression of magic).</p></li>
     <li><p>Units, except units of time, are presented in familiar terms to Earth readers, such as meters and kilograms. Units of time smaller than a day are in the familiar 24:60:60 format (as that is what is used in-universe), but these are slightly longer than their Earth counterparts. A year of 301 Yona days is split into eight months alternating 37 and 38 days, and an extra day at the end of the year called <em>Arvendanula</em>, which serves as the winter holiday. However, the lifespans of the in-universe humans turn out to be approximately 80 of these years, which is about 70 of our own.</p></li>
-    <li><p>Place names are not, in general, translated, though there may be exceptions.</p></li>
+    <li><p>Place names are not, in general, translated, though there may be exceptions (most notably, place names reused from Undertale or other source materials, such as "Hotland").</p></li>
     <li><p>Many names provided by Toby Fox only work in English (due to puns, Western naming conventions, or other such things), and are posited to be localized versions of in-universe names, which are used here. For example, instead of "Asgore", "Ruaeli" is used; instead of "Frisk", "Ana-hin" is used; instead of "Sans", "Arfia" is used. Character designs are posited to be similarly localized (in regards to clothing customs, connotations, pop culture, etc), though places where Undertale explicitly deviates from our world are kept.</p></li>
 
 
