--- a/index.html
+++ b/index.html
@@ -2790,7 +2790,7 @@ I have chosen to travel to Ebott in light of several disappearances near the mou
 </h4>
 
 <p class="c2">
-  <span class="c1">I guess I'm staying with these folks until I can find my way back to the Ruins. Gaster seemed aware of the "SAVE", unlike Toriel. So was the older child. The younger child is probably on the order of about one year old.</span>
+  <span class="c1">I guess I'm staying with these folks until I can find my way back to the Ruins. Gaster seemed aware of the "SAVE", unlike Onider. So was the older child. The younger child is probably on the order of about one year old.</span>
 </p>
 
 <p class="c2">
@@ -3144,11 +3144,11 @@ I have chosen to travel to Ebott in light of several disappearances near the mou
 </p>
 
 <p class="c2">
-  <span class="c1">Found where the Rugan(?) statue disappeared to. I asked someone about it and they said there are plans to move it to the 'UG Apartments' at the 'memorial fountain'. Someone named "Napstablook" has already put the music box in.  A theme representing the memory of Ondeli-Khara and of Ondeli in general.</span>
+  <span class="c1">Found where the Rugan(?) statue disappeared to. I asked someone about it and they said there are plans to move it to the 'UG Apartments' at the 'memorial fountain'. Someone named "Vinibor" has already put the music box in.  A theme representing the memory of Ondeli-Khara and of Ondeli in general.</span>
 </p>
 
 <p class="c2">
-  <span class="c1">P.S. There's this strange symbol everywhere. The 'Delta Rune'. Apparently 'Gerson' knows a lot about it, but he's the leader of the Royal Guard so I bet he'd just try and kill me.</span>
+  <span class="c1">P.S. There's this strange symbol everywhere. The 'Delta Rune'. Apparently 'Gerzo' knows a lot about it, but he's the leader of the Royal Guard so I bet he'd just try and kill me.</span>
 </p>
 
 <p class="c2">
@@ -3361,7 +3361,7 @@ Now Gaster doesn't have a TV.</span>
 </p>
 
 <p class="c2">
-  <span class="c1">I managed to make my way back to Toriel. It's been long enough, but Dalv came to me in mid-Minaha and said he had found a secret door in Snowdin Forest that led to an abandoned building. My SAVE still isn't working, so I've had to be a lot more careful than usual. I can't mess this up. As a result, my life's gotten a lot more boring.</span>
+  <span class="c1">I managed to make my way back to Onider. It's been long enough, but Dalv came to me in mid-Minaha and said he had found a secret door in Snowdin Forest that led to an abandoned building. My SAVE still isn't working, so I've had to be a lot more careful than usual. I can't mess this up. As a result, my life's gotten a lot more boring.</span>
 </p>
 
 <p class="c2">
