fixed BR years to BF and also made it so the timeline of Vanki history actually makes sense

--- a/index.html
+++ b/index.html
@@ -1603,17 +1603,17 @@ Tur-Myalvi: 82.3</p>
 
 <p>From the establishment of the High Kingdom by the Vanki to the fall of Hesan, the historical sister kingdom to Yarzon.</p>
 
-<p>Tonoi-Damat (1374-870 BR; full lifespan)<br />
-Aratikent (870-724 BR)<br />
-Etevni-Aratikent (724-551 BR)<br />
-Porakate (551-314 BR)</p>
+<p>Tonoi-Damat (1154-870 BF; full lifespan)<br />
+Aratikent (870-724 BF)<br />
+Etevni-Aratikent (724-551 BF)<br />
+Porakate (551-314 BF)</p>
 
 <p>The Post-Hesanic Rulers:</p>
 
-<p>Kalagara (314-196 BR)<br />
-Olijan (196-141 BR)<br />
-Durama (141-113 BR)<br />
-Zoto (113 BR-3 SR)</p>
+<p>Kalagara (314-196 BF)<br />
+Olijan (196-141 BF)<br />
+Durama (141-113 BF)<br />
+Zoto (113 BF-3 SR)</p>
 
 <p>The Dan-Ruerden Rulers:</p>
 
