--- a/index.html
+++ b/index.html
@@ -867,12 +867,13 @@
 <body>
     <div class="navbar">
         <img class="titleimg" src="logo.png">
-        <hr><h3 class="patchnotes"><a href="visualmedia.html" target="_blank" rel="noopener noreferrer"><em>Visual media</em></a> &bull; <a href="ost.html" target="_blank" rel="noopener noreferrer"> <em>Soundtrack</em></a></h3>
+        <hr><h3 class="patchnotes"><a href="visualmedia.html" target="_blank" rel="noopener noreferrer"><em>Visual media</em></a> &bull; <a href="ost.html" target="_blank" rel="noopener noreferrer"> <em>Soundtrack</em></a> &bull; <em><a href="https://wiki.jupiter-boy.com/index.php?title=Main_Page">Wiki</a> &bull; <a href="https://wiki.jupiter-boy.com/index.php?title=Glossary">Glossary</a></em></h3>
         <hr>
 
                    <p class="patchnotes"><br><a href="#e0"> Preface</a></p>   
                                       <p class="patchnotes"><br><a href="#announcements">News (e.g. new entries)</a></p> 
                                       <p class="patchnotes"><br><a href="#nondiegetic">Guides</a></p>  
+                                      
         <h3><a href="#h1">Narrative</a></h3>
 <p class="patchnotes"><a href="#e40">40. From the Torn Notebook (Annotated)</a></p>
 <p class="patchnotes"><br><a href="#e41">41. From the Torn Notebook (Annotated) (Part 2)</a></p>                                      
@@ -962,6 +963,7 @@
 
 <div class="list">
   <ul class="centerlist">
+    <li><p>2025-09-08: Added links to the Wiki and Glossary, as those are now a thing. I'll be largely pivoting away from entries for the near future, so don't expect too many updates to this site.</p></li>
     <li><p>2025-09-01: Added entry <a href="#e47" target="_blank" rel="noopener noreferrer">47</a> in the "Miscellaneous" section about space. Also, <strong>the section headers on the navbar are now clickable,</strong> and take you to special "hub" pages for each of the sections.</p></li>
     <li><p>2025-08-25: Added entries <a href="#e45" target="_blank" rel="noopener noreferrer">45</a> and <a href="#e46" target="_blank" rel="noopener noreferrer">46</a>. They are in the "Cultural Systems" section and explain some mythology. Also fixed a bunch of h3s being closed with h1 tags.</p></li>
             <li><p>2025-08-23: Added entries <a href="#e43" target="_blank" rel="noopener noreferrer">43</a> and <a href="#e44" target="_blank" rel="noopener noreferrer">44</a>. 43 is in the "History" section and is about the Underground. 44 is in the "Recommended context" section and serves as a summary of Undertale's story.</p></li>
@@ -4352,6 +4354,8 @@ GUIDES
 <div id="nondiegetic" class="tab-content">
   <h1>Guides</h1>
   <p>DISCLAIMER: This is not an in-universe source; this content is not diegetic unless explicitly specified otherwise.</p>
+  <h3><a href="https://wiki.jupiter-boy.com/index.php?title=Main_Page">Undersided Wiki</a></h3>
+  <h3><a href="https://wiki.jupiter-boy.com/index.php?title=Glossary">Undersided Glossary</a></h3>
 <h3 class="patchnotes">Character Name Guide</h3>
 <p>
 Undersided uses some replacement names for many Undertale characters.
