--- a/index.html
+++ b/index.html
@@ -963,6 +963,7 @@
 
 <div class="list">
   <ul class="centerlist">
+        <li><p>2025-09-09: Fixed a typo: Okhelai -> Ondeli. That's what I get for replacing all the character names, I guess.</p></li>
     <li><p>2025-09-08: Added links to the Wiki and Glossary, as those are now a thing. I'll be largely pivoting away from entries for the near future, so don't expect too many updates to this site.</p></li>
     <li><p>2025-09-01: Added entry <a href="#e47" target="_blank" rel="noopener noreferrer">47</a> in the "Miscellaneous" section about space. Also, <strong>the section headers on the navbar are now clickable,</strong> and take you to special "hub" pages for each of the sections.</p></li>
     <li><p>2025-08-25: Added entries <a href="#e45" target="_blank" rel="noopener noreferrer">45</a> and <a href="#e46" target="_blank" rel="noopener noreferrer">46</a>. They are in the "Cultural Systems" section and explain some mythology. Also fixed a bunch of h3s being closed with h1 tags.</p></li>
@@ -2323,7 +2324,7 @@ The king decided it was time to end our suffering. Every human who falls down he
 </p>
 <h4>Ana Kaizo</h4>
 <p>
-  <span>While the government was bumbling around and bumping into itself to work out what to do with Ebott (seems Ebott truly is cursed after all), it ended up being one determined individual, Ana-hin Kaizo, who took matters into their own hands and decided to do what the higher-ups somehow never ended up doing. With the help of the friends they made, and a certain Prince Okhelai, Ana-hin broke the barrier separating the Ebott Underground from the wider world, allowing Yarvant to populate Liruzon once more (this also served as a symbol to the yarov of Yarzon that it was safe to return home).</span>
+  <span>While the government was bumbling around and bumping into itself to work out what to do with Ebott (seems Ebott truly is cursed after all), it ended up being one determined individual, Ana-hin Kaizo, who took matters into their own hands and decided to do what the higher-ups somehow never ended up doing. With the help of the friends they made, and a certain Prince Ondeli, Ana-hin broke the barrier separating the Ebott Underground from the wider world, allowing Yarvant to populate Liruzon once more (this also served as a symbol to the yarov of Yarzon that it was safe to return home).</span>
 </p>
 
 <p>
