--- a/index.html
+++ b/index.html
@@ -1399,7 +1399,7 @@ Home became the center of the yaref population, and although the other settlemen
                 <h3 class="patchnotes"><em>917, Niki Myalvi</em> </h3>
                    <h4>Ramazir</h4>
                 <p>
-                    <span>Ramazir, or Ek-Ramazir, is the god of the night sky and the giver of wisdom in Estero-Korahai mythology. Ramazir's domain naturally extends to navigation for the maritime Monteraga people, as Monteraga sailors look to the stars for guidance when traveling the seas between Montera and Ezvelan. Like the gods of Ester in general, Ramazir is treated as an immaterial yet still anthropomorphic figure; his home is the heavens above the clouds.</span>
+                    <span>Ramazir, or Ek-Ramazir, is the god of the night sky and the giver of wisdom in Estero-Korahai mythology. Ramazir's domain naturally extends to navigation for the maritime Monteraga people, as Monteraga sailors look to the stars for guidance when traveling the seas between Montera and Ezvelan. Like the gods of Ester in general, Ramazir is treated as an immaterial yet still anthropomorphic figure.</span>
                   </p>
                   
                   <p>
